[gd_scene load_steps=16 format=3 uid="uid://01fi2eykheye"]

[ext_resource type="Script" path="res://scenes/entities/orchard/CiderSpirit/ciderspirit.gd" id="1_xb488"]
[ext_resource type="PackedScene" uid="uid://bkfoptt80pgom" path="res://scenes/entities/orchard/CiderSpirit/mugFollower/follwer_mug.tscn" id="2_aqgfs"]
[ext_resource type="Script" path="res://assets/resources/resource_scripts/jump_resource.gd" id="3_3awvy"]
[ext_resource type="PackedScene" uid="uid://byekeag2ch0em" path="res://scenes/entities/orchard/CiderSpirit/ciderspiritsprite.tscn" id="4_bi3ix"]
[ext_resource type="Texture2D" uid="uid://tl5u6qy6a8hk" path="res://assets/animations/cider spirit/hearts/heartbetter0003.png" id="4_o0aml"]
[ext_resource type="Texture2D" uid="uid://nrra6ydtbtbe" path="res://assets/animations/cider spirit/hearts/heartbetter0002.png" id="5_5m0xx"]
[ext_resource type="PackedScene" uid="uid://d1it1sqxelhs5" path="res://scenes/miscScenes/ground_tester.tscn" id="5_d5wc2"]
[ext_resource type="Texture2D" uid="uid://gjq541ubg121" path="res://assets/animations/cider spirit/hearts/heartbetter0001.png" id="6_1q2gn"]
[ext_resource type="AudioStream" uid="uid://b78cwufee84rm" path="res://assets/sound/effects/Misc/big_splash.wav" id="10_audu5"]

[sub_resource type="Resource" id="Resource_475e5"]
resource_local_to_scene = true
script = ExtResource("3_3awvy")
jump_height = 101.01
jump_up_time = 0.01
jump_down_time = 0.01

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t5r8p"]
resource_local_to_scene = true
size = Vector2(35, 50.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x7760"]
size = Vector2(6.99758, 35.5009)

[sub_resource type="Animation" id="Animation_m07p3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bone:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bone:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_5dv12"]
resource_name = "walk_right"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bone:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(0, -2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bone:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.07, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [-0.16057, 0.0, 0.322886]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mxmti"]
_data = {
"RESET": SubResource("Animation_m07p3"),
"walk_right": SubResource("Animation_5dv12")
}

[node name="CiderSpirit" type="CharacterBody2D" node_paths=PackedStringArray("transform_animation", "parabola_position", "splash_location", "splash_collision", "sprite")]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_xb488")
combination_threshold = 50.0
max_jump = Vector2(600, 300)
transform_animation = NodePath("AnimationPlayer")
parabola_position = NodePath("parabola_position")
parabala_target_speed = 1.0
jump_speed = 800.0
follower_mug_ps = ExtResource("2_aqgfs")
splash_location = NodePath("bone/Sprite2D/splash_location")
splash_collision = NodePath("splashCollision")
jr = SubResource("Resource_475e5")
walk_speed = Vector2(1, 1)
run_modifier = 1.0
do_fast_fall = false
sprite = NodePath("bone/Sprite2D")
heart_text = Array[Texture2D]([ExtResource("4_o0aml"), ExtResource("5_5m0xx"), ExtResource("6_1q2gn")])
speed = Vector2(0.1, 1)

[node name="bone" type="Marker2D" parent="."]

[node name="Sprite2D" parent="bone" node_paths=PackedStringArray("transform_animator") instance=ExtResource("4_bi3ix")]
position = Vector2(5, -51)
scale = Vector2(0.21975, 0.21975)
transform_animator = NodePath("../../AnimationPlayer")

[node name="splash_location" type="Node2D" parent="bone/Sprite2D"]
position = Vector2(227.531, 9.10125)

[node name="mainCollision" type="CollisionShape2D" parent="."]
position = Vector2(3, -26)
shape = SubResource("RectangleShape2D_t5r8p")

[node name="splashCollision" type="CollisionShape2D" parent="."]
position = Vector2(3.24968, -3.99896)
rotation = 1.57094
shape = SubResource("RectangleShape2D_x7760")
disabled = true

[node name="GroundTester" parent="." instance=ExtResource("5_d5wc2")]
position = Vector2(5, 0)
scale = Vector2(0.21, 0.03)

[node name="unposSpot" type="Node2D" parent="."]
position = Vector2(0, -73)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mxmti")
}

[node name="parabola_position" type="Node2D" parent="."]
editor_description = "this is where the cider spirit starts drawing its parabola from"
position = Vector2(1, -24)

[node name="AI_Reset_Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="big_splash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_audu5")

[connection signal="animation_finished" from="AnimationPlayer" to="bone/Sprite2D" method="_on_animation_player_animation_finished"]
